# fresh-deploy-with-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  devenv.nix  docker-compose.yml
islands/: Counter.tsx
src/: main.rs
